<resources>
    <string name="app_name">Github User Finder</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="hint_search">search here</string>
    <string name="search_icon">search</string>
    <string name="start_your_finding_by_typing_in_search_bar">Start your finding by typing in search bar</string>
    <string name="user_not_found">User Not Found!</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="follower">follower</string>
    <string name="following">following</string>
    <string name="repository">repository</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="todo">TODO</string>
    <string name="language_settings">Language</string>
    <string name="user">user</string>
    <string name="showing">showing</string>
<<<<<<< HEAD
    <string name="my_favorite">My Favorite</string>
    <string name="your_favorite_user_will_appear_here">Your favorite user will appear here!</string>
    <string name="alarm" translatable="false">Alarm</string>
=======
>>>>>>> 876c1561c8caabce609a04a81f2d0760c65955ed
</resources>
