<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_received"
            android:layout_width="180dp"
            android:layout_height="180dp"
            tools:src="@android:color/background_dark">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/tv_name_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/name"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>
        <TextView
            android:id="@+id/tv_username_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/username"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_baseline_person_24">
        </TextView>
        <TextView
            android:id="@+id/tv_company_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/company"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_baseline_work_24">
        </TextView>
        <TextView
            android:id="@+id/tv_location_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/location"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_follower"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="@string/follower"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>
            <TextView
                android:id="@+id/tv_following"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="following"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1">
            </TextView>
            <TextView
                android:id="@+id/tv_repository"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="repository"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1">
            </TextView>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:tabTextColor="@color/black" />
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>
    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:background="@drawable/favorite_toggle"
        android:textOff=""
        android:textOn=""
        android:checked="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>